syntax = "proto3";

package orders;

option go_package = "../proto";

message Order {
    int32 id = 1;
    int32 user_id = 2;
    double total_price = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
    repeated OrderItem order_items = 7;
}

message OrderItem {
    int32 id = 1;
    int32 order_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    double price = 5;
}

message CreateOrderRequest {
    int32 user_id = 1;
    repeated OrderItemRequest items = 2;
}

message OrderItemRequest {
    int32 product_id = 1;
    int32 quantity = 2;
    double price = 3;
}

message GetOrderItemRequest {
    int32 order_item_id = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message OrderResponse {
    Order order = 1;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}
