syntax = "proto3";

package payment;

option go_package = "../proto";

message OrderPayment {
  int32 id = 1;
  int32 user_id = 2;
  int32 order_id = 3;
  string status = 4;  
  double total_price = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreatePaymentRequest {
  int32 user_id = 1;
  int32 order_id = 2;
  string status = 3;  
  double total_price = 4;
}

message EmptyPayment {}

service PaymentService {
    rpc PayOrder (CreatePaymentRequest) returns (EmptyPayment);
}
